--- a/JSQMessagesViewController/Controllers/JSQMessagesViewController.xib
+++ b/JSQMessagesViewController/Controllers/JSQMessagesViewController.xib
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="JSQMessagesViewController">
             <connections>
                 <outlet property="collectionView" destination="l9u-2b-4LK" id="bLP-6g-CkO"/>
+                <outlet property="emojiButton" destination="hE6-tm-tVz" id="XKE-Wv-Yby"/>
                 <outlet property="inputBar" destination="zSe-kp-Prg" id="tYW-f9-LFi"/>
                 <outlet property="inputBarBottomConstraint" destination="Z12-rz-0sm" id="eo2-63-aah"/>
                 <outlet property="inputBarHeightConstraint" destination="DJT-aH-rsP" id="4Pr-jL-Ut9"/>
@@ -40,7 +39,7 @@
                     <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UQU-Nf-Gr5">
-                            <rect key="frame" x="56" y="13" width="15" height="25"/>
+                            <rect key="frame" x="53" y="13" width="15" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="Dgq-Ow-Vzc"/>
                                 <constraint firstAttribute="width" constant="15" id="s7w-1o-jfJ"/>
@@ -62,9 +61,9 @@
                             </state>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NVI-4n-k9R">
-                            <rect key="frame" x="85" y="0.0" width="240" height="50"/>
+                            <rect key="frame" x="114" y="0.0" width="211" height="50"/>
                             <subviews>
-                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cEp-vy-YTH">
+                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cEp-vy-YTH">
                                     <rect key="frame" x="0.0" y="0.0" width="240" height="0.0"/>
                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
@@ -72,7 +71,7 @@
                                     </constraints>
                                 </scrollView>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ah3-0i-FMc" customClass="JSQMessagesComposerTextView">
-                                    <rect key="frame" x="0.0" y="0.0" width="240" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="211" height="50"/>
                                     <color key="backgroundColor" red="0.84705882349999995" green="0.13725490200000001" blue="0.1647058824" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="iKB-ca-ZuC"/>
@@ -96,7 +95,7 @@
                                 <constraint firstItem="Ah3-0i-FMc" firstAttribute="height" relation="lessThanOrEqual" secondItem="NVI-4n-k9R" secondAttribute="height" id="ffq-3a-iDO"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uSE-gi-g26">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uSE-gi-g26">
                             <rect key="frame" x="328" y="10" width="46" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="ybw-wz-Myn"/>
@@ -105,22 +104,35 @@
                                 <color key="titleColor" red="0.72941176470000002" green="0.59999999999999998" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hE6-tm-tVz">
+                            <rect key="frame" x="78" y="13" width="25" height="25"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="25" id="3p5-lt-WC6"/>
+                            </constraints>
+                            <state key="normal" backgroundImage="emoji">
+                                <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleShadowColor" red="0.94117647059999998" green="0.83529411760000005" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="NVI-4n-k9R" secondAttribute="trailing" constant="50" id="2bQ-n3-xSU"/>
                         <constraint firstItem="uSE-gi-g26" firstAttribute="leading" secondItem="Ah3-0i-FMc" secondAttribute="trailing" constant="3" id="2yc-qX-QBY"/>
                         <constraint firstAttribute="bottom" secondItem="UQU-Nf-Gr5" secondAttribute="bottom" constant="12" id="4jG-1x-FlV"/>
-                        <constraint firstItem="UQU-Nf-Gr5" firstAttribute="leading" secondItem="u99-da-1JK" secondAttribute="trailing" constant="13" id="7Rw-ol-abJ"/>
+                        <constraint firstItem="UQU-Nf-Gr5" firstAttribute="leading" secondItem="u99-da-1JK" secondAttribute="trailing" constant="10" id="7Rw-ol-abJ"/>
+                        <constraint firstItem="hE6-tm-tVz" firstAttribute="top" secondItem="UQU-Nf-Gr5" secondAttribute="top" id="Asn-vt-7ti"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="250" id="DJT-aH-rsP"/>
                         <constraint firstItem="NVI-4n-k9R" firstAttribute="top" secondItem="zSe-kp-Prg" secondAttribute="top" id="EDN-03-dzZ"/>
                         <constraint firstItem="u99-da-1JK" firstAttribute="bottom" secondItem="zSe-kp-Prg" secondAttribute="bottom" constant="-12" id="GMY-ms-moe"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="Ovl-Ze-Owj"/>
+                        <constraint firstItem="hE6-tm-tVz" firstAttribute="bottom" secondItem="UQU-Nf-Gr5" secondAttribute="bottom" id="RIy-fM-dMQ"/>
                         <constraint firstItem="u99-da-1JK" firstAttribute="leading" secondItem="zSe-kp-Prg" secondAttribute="leading" constant="11" id="Z17-Q9-Wd9"/>
                         <constraint firstAttribute="trailing" secondItem="uSE-gi-g26" secondAttribute="trailing" constant="1" id="ZBb-cV-Avk"/>
                         <constraint firstAttribute="bottom" secondItem="NVI-4n-k9R" secondAttribute="bottom" id="f1a-a5-yNX"/>
-                        <constraint firstItem="NVI-4n-k9R" firstAttribute="leading" secondItem="UQU-Nf-Gr5" secondAttribute="trailing" constant="14" id="fhp-1Z-j8d"/>
                         <constraint firstItem="NVI-4n-k9R" firstAttribute="height" secondItem="zSe-kp-Prg" secondAttribute="height" id="ggo-kA-Y6o"/>
+                        <constraint firstItem="hE6-tm-tVz" firstAttribute="leading" secondItem="UQU-Nf-Gr5" secondAttribute="trailing" constant="10" id="j1G-hW-RBQ"/>
+                        <constraint firstItem="NVI-4n-k9R" firstAttribute="leading" secondItem="hE6-tm-tVz" secondAttribute="trailing" constant="11" id="l5B-Km-gzK"/>
                         <constraint firstAttribute="bottom" secondItem="uSE-gi-g26" secondAttribute="bottom" constant="10" id="yeO-ZN-9iL"/>
                     </constraints>
                 </view>
@@ -137,16 +149,12 @@
                 <constraint firstAttribute="trailing" secondItem="l9u-2b-4LK" secondAttribute="trailing" id="uTs-cO-7RI"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <point key="canvasLocation" x="35.5" y="53.5"/>
+            <point key="canvasLocation" x="50.399999999999999" y="35.532233883058474"/>
         </view>
     </objects>
     <resources>
         <image name="chat_icon_img" width="45" height="36"/>
         <image name="chat_icon_mic" width="26" height="39"/>
+        <image name="emoji" width="40" height="40"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
-    </simulatedMetricsContainer>
 </document>
